8242429: Better implementation for sign extract

Reviewed-by: vlivanov, thartmann